integration_tests/codegen_fail/fail/enum/derive_duplicated_variant_names.rs
#[derive(juniper::GraphQLEnum)]
enum Test {
    Test,
    #[graphql(name = "TEST")]
    Test1,
}

fn main() {}
